--- a/cats/index.html
+++ b/cats/index.html
@@ -20,7 +20,7 @@
       }
     </style>
   </head>
-  <h1>Kitten Happiness Testing</h1>
+  <h1>Kitten Happiness Testing changes</h1>
   <script language="javascript">
     var imgArray = new Array();
     var bucket =
